# my_apps

./: README.md  hospital-server.py  hospital-simulator.user.js  package.json  rum-simulator.user.js  server.js  server.py
ai_red_teaming_banking_and_finance/: README.md  app.py  ingest.py  mcp_server.py  mcp_server_http.py  requirements.txt  setup.sh
ai_red_teaming_banking_and_finance/chroma_db/: chroma.sqlite3
ai_red_teaming_banking_and_finance/data/: accounts.json  loans.json  products.json  transactions.json  transfers.json
ai_red_teaming_banking_and_finance/docs/: faq.txt
ai_red_teaming_banking_and_finance/templates/: index.html
ai_red_teaming_car_sales_portal_chatbot/: README.md  TROUBLESHOOTING.md  agents.py  ai-assets.yaml  app.py  car_sales_agent.py  documentation.md  ingest.py  mcp.json  mcp_server.py  mcp_server_http.py  pyproject.toml  requirements.txt  setup.sh
ai_red_teaming_car_sales_portal_chatbot/.github/workflows/: agentic-radar-scan.yaml
ai_red_teaming_car_sales_portal_chatbot/.splx/: config.yaml
ai_red_teaming_car_sales_portal_chatbot/chroma_db/: chroma.sqlite3
ai_red_teaming_car_sales_portal_chatbot/data/: appointments.json  faq.txt  inventory.json
ai_red_teaming_car_sales_portal_chatbot/templates/: index.html
public/: styles.css
public-ecommerce/: app.js  ecommerce-server.js  ecommerce-server.py  ecommerce-simulator.user.js  index.html  styles.css
public-hospital/: app.js  hospital-server.py  hospital-simulator.user.js  index.html  styles.css
rum-financial-services/: app.js  financial-server.py  index.html  styles.css
rum-public-ecommerce/: ecommerce-server.js  ecommerce-server.py  ecommerce-simulator.user.js  index.html  styles.css
rum-public-hospital/: hospital-server.py  hospital-simulator.user.js  index.html
